JSC shell shouldn't treat NUL as a terminator when printing a JS string https://bugs.webkit.org/show_bug.cgi?id=210037

Reviewed by Darin Adler.

JSTests:

* .gitattributes:
* ChakraCore.yaml:
* ChakraCore/test/es5/hasItem.baseline-jsc: Added.
Update baseline and mark it diffable (as plaintext) in spite of containing \0.

Source/JavaScriptCore:

Since JS strings aren't null-terminated, it's probably a better experience to not stop printing when we see \0.
That is, 'abc\0def' should be printed as `abcdef` and not `abc`.

This patch updates our printing of evaluation results as well as the print / printErr / debug functions.

* jsc.cpp:
(printInternal):
(functionDebug):
(runInteractive):


Canonical link: https://commits.webkit.org/222955@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259564 268f45cc-cd09-0410-ab3c-d52691b4dbfc